--- a/frontend/src/styles/components/EventPage/SeatDraw.scss
+++ b/frontend/src/styles/components/EventPage/SeatDraw.scss
@@ -3,7 +3,6 @@
     flex-direction: column;
 
     width: 100%;
-    height: 100vh;
 }
 
 .SeatDraw_Wrapper {
@@ -217,4 +216,20 @@
     font-family: Spoqa Han Sans Neo;
     font-size: 13px;
     font-weight: 400;
+}
+
+.SeatDraw_BottomText3 {
+    margin-left: auto;
+    margin-right : auto;
+
+    margin-top : 23px;
+    margin-bottom : 85px;
+    width: 301px;
+    color: #303034;
+    text-align: center;
+    font-family: Spoqa Han Sans Neo;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
