--- a/frontend/src/styles/components/EventPage/TreasureHunt.scss
+++ b/frontend/src/styles/components/EventPage/TreasureHunt.scss
@@ -3,7 +3,6 @@
     flex-direction: column;
 
     width: 100%;
-    height: 100vh;
 }
 
 .TreasureHunt_Wrapper {
@@ -76,3 +75,194 @@
     margin-top : 33px;
 }
 
+
+.TreasureHunt_JoinWrapper {
+    display: flex;
+    flex-direction: column;
+
+    width: 100%;
+    height: 130vh;
+    align-items: center;
+}
+
+.TreasureHunt_Join {
+    display: flex;
+    flex-direction: column;
+    width: 160px;
+    height : 39px;
+    color: var(--black, #212121);
+    text-align: center;
+    font-family: Spoqa Han Sans Neo;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 700;
+    margin-top:47.66px;
+}
+
+.TreasureHunt_Point {
+
+    position: absolute;
+    margin-top : 14px;
+    width: 160px;
+    height: 24px;
+    background: rgba(150, 204, 255, 0.50);
+}
+
+
+.TreasureHunt_notice {
+    width:263px;
+    height:56px;
+
+    margin-top:26.98px;
+
+    color: #303034;
+    text-align: center;
+    font-family: Spoqa Han Sans Neo;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.TreasureHunt_notice2 {
+    width:294px;
+    height:25px;
+
+    margin-top:10px;
+
+    color: var(--gray-3, #5E5E62);
+    text-align: center;
+    font-family: Spoqa Han Sans Neo;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+
+    margin-bottom: 30px;
+}
+
+.TreasureHunt_notice3 {
+    display: flex;
+    flex-direction: row;
+
+    width : 310px;
+    justify-content: left;
+    margin-bottom: 10px;
+}
+.TreasureHunt_notice3_number {
+    color: #303034;
+    text-align: center;
+    font-family: Spoqa Han Sans Neo;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-right : 16px;
+}
+.TreasureHunt_notice4 {
+    color: #303034;
+    font-family: Spoqa Han Sans Neo;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+
+.TreasureHunt_Detail {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    height: 224px;
+
+    margin-top : 40px;
+    margin-left : auto;
+    margin-right : auto;
+}
+
+.TreasureHunt_Detail_Layout {
+    display: flex;
+    flex-direction: row;
+    width: 300px;
+    height: 224px;
+
+    margin-bottom: 16px;
+
+    .TreasureHunt_Detail_Layout_Title{
+        display: flex;
+        color: var(--black, #212121);
+        font-family: Spoqa Han Sans Neo;
+        font-size: 24px;
+        font-weight: 700;
+        margin-right : auto;
+        align-items: center;
+        //justify-content: center;
+    }
+    .TreasureHunt_Detail_Layout_Title1{
+        display: flex;
+        color: var(--black, #212121);
+        font-family: Spoqa Han Sans Neo;
+        font-size: 24px;
+        font-weight: 700;
+        margin-right : auto;
+        align-items: center;
+        margin-bottom:150px;
+        //justify-content: center;
+    }
+    .TreasureHunt_Detail_Layout_Title2{
+        width:91px;
+        height:17px;
+        display: flex;
+        color: var(--black, #212121);
+        font-family: Spoqa Han Sans Neo;
+        font-size: 24px;
+        font-weight: 700;
+        margin-right : auto;
+        align-items: center;
+        margin-top:16px;
+        //justify-content: center;
+    }
+    .TreasureHunt_Detail_Layout_Text{
+        color: #303034;
+        text-align: right;
+        font-family: Pretendard;
+        font-size: 17px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 22px; /* 129.412% */
+    }
+    .TreasureHunt_Detail_Layout_Text1{
+        color: #303034;
+        text-align: right;
+        font-family: Pretendard;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 22px; /* 137.5% */
+    }
+    .TreasureHunt_Detail_Layout_Text2 {
+        color: #303034;
+        text-align: right;
+        font-family: Pretendard;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 22px; /* 157.143% */
+    }
+}
+
+.TreasureHunt_BottomText {
+    margin-left: auto;
+    margin-right : auto;
+
+    margin-top : 52px;
+    margin-bottom : 85px;
+    width: 301px;
+    color: #303034;
+    text-align: center;
+    font-family: Spoqa Han Sans Neo;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
