--- a/frontend/src/styles/components/EventPage/TreasureHunt.scss
+++ b/frontend/src/styles/components/EventPage/TreasureHunt.scss
@@ -158,7 +158,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    margin-right : 16px;
+    margin-left : 10px;
 }
 .TreasureHunt_notice4 {
     color: #303034;
@@ -167,6 +167,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+    margin-left:20px;
 }
 
 
