--- a/frontend/src/styles/components/EventPage/EventCategory.scss
+++ b/frontend/src/styles/components/EventPage/EventCategory.scss
@@ -2,8 +2,6 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    
-    margin: auto;
 }
 
 .EventCategory-selector {
@@ -61,4 +59,10 @@
     font-size: 20px;
     line-height: 25px;
     color: #454545;
+}
+
+.SelectedCategoryComponent {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
