--- a/frontend/src/styles/components/EventPage/SmungSlideShow.scss
+++ b/frontend/src/styles/components/EventPage/SmungSlideShow.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
 
     width: 100%;
+    margin-top : 350px;
 }
 
 .SmungSlideShow_Wrapper {
@@ -23,4 +24,58 @@
     font-weight: 700;
     line-height: normal;
     letter-spacing: 0.24px;
+}
+
+.SmungSlideShow_Collection {
+    display: flex;
+
+    width: 100%;
+    height : 200px;
+    align-items: center;
+    justify-content: center;
+
+    margin-top : 20px;
+}
+
+.SmungSlideShow_Collection_Btn,
+.SmungSlideShow_Collection_UnBtn {
+
+    width : 50px;
+    height : 50px;
+    margin-left : auto;
+    margin-right : auto;
+
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: var(--black, #212121);
+    font-family: Spoqa Han Sans Neo;
+    font-size: 35px;
+    padding-top : 2px;
+    font-weight: 700;
+    border-radius: 4px;
+}
+
+.SmungSlideShow_Collection_UnBtn {
+    width : 50px;
+    height : 50px;
+    border-radius: 4px;
+    border: none;
+    background: none;
+    margin-left : auto;
+    margin-right : auto;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.smung_circle_collection {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+
+    justify-content: center;
+    align-items: center;
+
+    margin-top : 16px;
 }
