--- a/frontend/src/styles/components/EventPage/SeatDraw.scss
+++ b/frontend/src/styles/components/EventPage/SeatDraw.scss
@@ -233,3 +233,38 @@
     font-weight: 500;
     line-height: normal;
 }
+
+
+.CountWrapper {
+    display: flex;
+    flex-direction: row;
+    margin-left: auto;
+    margin-right : auto;
+    margin-top:10px;
+
+}
+
+.CountDown {
+    color: var(--black, #212121);
+    text-align: center;
+    font-family: Spoqa Han Sans Neo;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+
+}
+
+.Count_Text {
+    color: var(--black, #212121);
+    text-align: center;
+    font-family: Spoqa Han Sans Neo;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+
+    margin-left:19.02px;
+
+
+}
