--- a/frontend/src/components/container/InformationPage/drag.scss
+++ b/frontend/src/components/container/InformationPage/drag.scss
@@ -2,8 +2,8 @@
 .mini-window-container {
   position: fixed;
   bottom: 0;
-  // left: 0;
-  right: 0;
+  //left: 100px;
+  right: 0px;
   border-radius: 24px 24px 0px 0px;
   background: #fff;
   box-shadow: 0px -2px 6px rgba(0, 0, 0, 0.1);
