--- a/frontend/src/styles/components/TimelinePage/SlideShow.scss
+++ b/frontend/src/styles/components/TimelinePage/SlideShow.scss
@@ -11,6 +11,7 @@
   
 .swiper-container {
     position:relative;
+    display: flex;
     width: 334px; 
     height: 360px;
     overflow: hidden;
@@ -31,6 +32,7 @@
         border-radius: 20px;
 
         &.swiper-slide-active{
+            display: flex;
             width: 262px;
             height: 332px;
             border-radius: 20px;
@@ -40,6 +42,7 @@
   }
 }
 .SlideShow_Wrapper_LayOut {
+    display: flex;
     width : 262px;
     height :340px;
 }
@@ -57,6 +60,7 @@
   }
   
   .card-inner {
+    display: flex;
     width: 262px; 
     height: 332px;
     position: relative;
@@ -85,6 +89,7 @@
   
 
 .SlideShow_Wrapper_Img {
+    display: flex;
     width : 262px;
     height :332px;
     border-radius: 20px;
@@ -142,6 +147,8 @@
 }
 
 .Img_Detail {
+    display: flex;
+    flex-direction: column;
     width: 262px; 
     height: 332px;
     border-radius: 20px;
@@ -203,12 +210,13 @@
     .content1{
         color: var(--black, #212121);
         font-family: Spoqa Han Sans Neo;
-        font-size: 15px;
+        font-size: 14px;
         font-style: normal;
         font-weight: 500;
         line-height: normal;
         margin-top : 8px;
         margin-bottom: 8px;
+        letter-spacing: -0.5px;
     }
     .title {
         color: var(--main, var(--main, #4F75FF));
@@ -217,31 +225,34 @@
         font-style: normal;
         font-weight: 700;
         line-height: normal;
-        margin-top : 14px;
+        margin-top : 2px;
     }
     .content2 {
         color: var(--gray-2, #919094);
-        font-family: Spoqa Han Sans Neo;
-        font-size: 15px;
+        font-family: Pretendard;
+        font-size: 14.5px;
         font-style: normal;
-        font-weight: 500;
+        font-weight: 600;
         line-height: normal;
         margin-top : 8px;
         margin-bottom: 8px;
+        letter-spacing: -0.5px;
     }
 }
 
 .back_logo {
     display: flex;
     flex-direction: column;
-    width: auto;
-    height: auto;
+
+    width: 100%;
+    height: 30px;
+
     color: rgba(79, 117, 255, 0.40);
     font-family: Spoqa Han Sans Neo;
     font-size: 8px;
-    font-style: normal;
     font-weight: 400;
-    line-height: normal;
 
     text-align: center;
+
+    margin : auto auto;
 }
