--- a/frontend/src/styles/components/TimelinePage/DetailPerformance1.scss
+++ b/frontend/src/styles/components/TimelinePage/DetailPerformance1.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     width: 100%;
 
+
     //background: var(--main, #4F75FF);
 }
 
@@ -11,4 +12,5 @@
     margin-top : 10px;
     background-color: #fff;
     border-radius: 40px 40px 0 0;
+    overflow: hidden;
 }
