--- a/frontend/src/styles/components/TimelinePage/SlideShow.scss
+++ b/frontend/src/styles/components/TimelinePage/SlideShow.scss
@@ -7,6 +7,7 @@
 
     margin-top : 68px;
     margin-bottom : 102px;
+    overflow-x: hidden;
 }
   
 .swiper-container {
@@ -22,7 +23,7 @@
         width: 262px;
         height: 332px;
         display:flex; 
-        align-items:center; 
+        // align-items:center; 
         justify-content:center; 
   
         transition : all .2s linear ;  
@@ -45,6 +46,7 @@
     display: flex;
     width : 262px;
     height :340px;
+    border-radius: 20px;
 }
 // Carousel.scss
 
@@ -56,6 +58,7 @@
     border-radius: 20px;
   
     perspective: 1000px; // 추가
+    
     
   }
   
@@ -77,6 +80,9 @@
     width: 262px; 
     height: 332px;
     backface-visibility: hidden;
+    overflow: hidden;
+    border-radius: 20px;
+    box-shadow: 0px 2px 8px 0px rgba(99, 99, 99, 0.20);
 }
 
 .card-back {
