--- a/frontend/src/styles/components/TimelinePage/Box.scss
+++ b/frontend/src/styles/components/TimelinePage/Box.scss
@@ -1,7 +1,8 @@
-.Box_Container {
+.Box_Container_Layout {
     width: 255px;
+    $height: auto;
     border-radius: 12px;
-    background: linear-gradient(180deg, #EEE 74.48%, rgba(238, 238, 238, 0.00) 100%);
+    background: var(--light-gray, #EEE);
     box-shadow: 0px 2px 8px 0px rgba(99, 99, 99, 0.20);
     margin-top : 12px;
 }
