--- a/frontend/src/styles/components/MainPage/MainView.scss
+++ b/frontend/src/styles/components/MainPage/MainView.scss
@@ -34,12 +34,12 @@
 
 .MainView_Text2,
 .MainView_Text3 {
-    font-family: 'Black Han Sans';
+    font-family: 'Black Han Sans', 'Noto Sans', 'Pretendard';
     font-weight: 900;
 }
 
 .MainView_Text1 {
-    font-family: Roboto;
+    font-family: 'Roboto';
     font-size: 20px;
     font-weight: 700;
 }
