--- a/frontend/src/styles/components/common/Header.scss
+++ b/frontend/src/styles/components/common/Header.scss
@@ -1,28 +1,17 @@
-.Header_Container1{
+.Header_Container1,
+.Header_Container2 {
     display: flex;
-
     width : 100%;
     height : 90px;
-    overflow-x: hidden;
-
-    align-items: center;
-    justify-content: center;
-
+    overflow: hidden;
+}
+.Header_Container1{
     color : white;
     font-family: Spoqa Han Sans Neo;
     font-size: 16px;
 }
 
 .Header_Container2{
-    display: flex;
-    width : 100%;
-    height : 90px;
-
-    overflow-x: hidden;
-
-    align-items: center;
-    justify-content: center;
-
     position: absolute;
     top:0;
     left:0;
@@ -30,29 +19,26 @@
 
 .Header_Wrapper {
     display: flex;
+    width: 100%;
+    height: 100%;
     flex-direction: row;
+    justify-content: space-between; /* 요소들 사이에 균등한 공간 배분 */
+    padding: 0 30px; /* 좌우 여백 추가 */
+    box-sizing: border-box; /* 패딩이 너비에 포함되도록 설정 */
 
     align-items: center;
-    justify-content: center;
-    margin : 0 auto;
 }
 
+
 .Header_Props {
-    width: 90px;
-    max-width : 120px;
+    display: flex;
+    width: auto;
+    height: 100%;
+    margin-left : -45px;
+    margin-top: 3px;
     font-family: Noto Sans KR;
     font-size: 18px;
     font-weight: 700;
     text-align: center;
-    margin-left : - 60px;
-    margin-right : -30px;
-}
-
-.Header_Img {
-    margin-right: 124px;
-    margin-left : auto;
-}
-.Header_MenuIcon {
-    margin-left : 124px;
-    margin-right : auto;
+    align-items: center;
 }
