--- a/frontend/src/styles/components/EventPage/TreasureHunt.scss
+++ b/frontend/src/styles/components/EventPage/TreasureHunt.scss
@@ -212,7 +212,7 @@
         //justify-content: center;
     }
     .TreasureHunt_Detail_Layout_Title2{
-        width:91px;
+        width: auto;
         height:17px;
         display: flex;
         color: var(--black, #212121);
