--- a/frontend/src/styles/components/EventPage/TreasureHunt.scss
+++ b/frontend/src/styles/components/EventPage/TreasureHunt.scss
@@ -3,12 +3,14 @@
     flex-direction: column;
 
     width: 100%;
-    height : auto;
+    height : 1400px;
 }
 
 .TreasureHunt_Wrapper {
     display: flex;
     flex-direction: column;
+
+    flex-shrink: 0;
 
     width: 100%;
     height: 330px;
