--- a/frontend/src/components/container/InformationPage/drag.scss
+++ b/frontend/src/components/container/InformationPage/drag.scss
@@ -2,14 +2,15 @@
 .mini-window-container {
   position: fixed;
   bottom: 0;
-  // left: 0;
-  right: 0;
+  //left: 100px;
+  right: 0px;
   border-radius: 24px 24px 0px 0px;
   background: #fff;
   box-shadow: 0px -2px 6px rgba(0, 0, 0, 0.1);
   transform: translateY(0);
   /* 초기 상태에서 아래에 위치 */
   max-height: 100vh;
+  //max-height: 0;
   /* 초기 높이를 최대 높이로 설정 (전체 화면 높이) */
   overflow: hidden;
   /* 넘치는 내용 숨김 */
@@ -42,19 +43,7 @@
 }
 
 /* 작은 창 열기/닫기 버튼 스타일 */
-.mini-window-toggle {
-  cursor: pointer;
-  background-color: #007bff;
-  color: #fff;
-  text-align: center;
-  padding: 10px;
-  font-size: 18px;
-  border-radius: 4px;
-}
 
-.mini-window-toggle:hover {
-  background-color: #0056b3;
-}
 
 .scrollable-container {
   max-height: 400px;
