--- a/frontend/src/styles/components/EventPage/TreasureHunt.scss
+++ b/frontend/src/styles/components/EventPage/TreasureHunt.scss
@@ -84,7 +84,7 @@
     flex-direction: column;
 
     width: 100%;
-    height: 130vh;
+    height: auto;
     align-items: center;
 }
 
@@ -177,7 +177,7 @@
     display: flex;
     flex-direction: column;
     width: 300px;
-    height: 224px;
+    height: auto;
 
     margin-top : 40px;
     margin-left : auto;
@@ -188,7 +188,7 @@
     display: flex;
     flex-direction: row;
     width: 300px;
-    height: 224px;
+    height: auto;
 
     margin-bottom: 16px;
 
