--- a/frontend/src/styles/components/EventPage/DressCode.scss
+++ b/frontend/src/styles/components/EventPage/DressCode.scss
@@ -1,10 +1,7 @@
 .DressCode_Container {
     display: flex;
     flex-direction: column;
-
     width: 100%;
-
-
 }
 
 .DressCode_Wrapper {
@@ -313,7 +310,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    // letter-spacing: -0.5px;
+    letter-spacing: -0.5px;
 }
 
 .DressCode_BottomText {
@@ -341,7 +338,7 @@
     font-weight: 500;
     line-height: normal;
 
-    margin-top:-20px;
+    margin-top:-10px;
     margin-left:11px;
 }
 
@@ -351,23 +348,29 @@
     flex-direction: column;
     width: 320px;
 
+    text-align: center;
     justify-content: center;
     align-items: center;
 
     margin-top : 60px;
-    margin-left : -10px;
+    margin-left : auto;
     margin-right : auto;
 }
 .DressCode_BottomText1 {
     display: flex;
 
+    width: 328px;
     color: #303034;
     text-align: center;
     font-family: Spoqa Han Sans Neo;
     font-size: 16px;
-    font-style: normal;
     font-weight: 500;
     line-height: normal;
+
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin-right : 9px;
 }
 
 .DressCode_BottomText2Wrapper {
