--- a/frontend/src/styles/components/MainPage/NumberBox.scss
+++ b/frontend/src/styles/components/MainPage/NumberBox.scss
@@ -15,7 +15,7 @@
 
     margin-right : 4px; 
     color: #09F;
-    font-family: Noto Sans KR;
+    font-family: 'Noto Sans KR';
     font-size: 48.252px;
     font-style: normal;
     font-weight: 500;
