--- a/frontend/src/styles/components/InformationPage/informationfcn.scss
+++ b/frontend/src/styles/components/InformationPage/informationfcn.scss
@@ -86,6 +86,7 @@
       height: 2px;
       background-color: #4f75ff;
       display: none;
+      margin-top : 1px;
 
       &.active {
         display: block;
