--- a/frontend/src/styles/components/EventPage/EventCategory.scss
+++ b/frontend/src/styles/components/EventPage/EventCategory.scss
@@ -14,8 +14,6 @@
 }
 
 .EventCategory-button {
-
-    margin-left: 10%;
     border: none; 
     background: transparent; 
     outline: none; 
@@ -25,7 +23,6 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 23px;
-
     color: #D8DCE0;
     margin-left : auto;
     margin-right : auto;
@@ -33,7 +30,7 @@
 
 @media (max-width: 480px) {
     .EventCategory-button {
-        margin-left: 4%; 
+        margin-left: auto; 
     }
 }
 
