--- a/frontend/src/styles/components/CreatorPage/CreatorList.scss
+++ b/frontend/src/styles/components/CreatorPage/CreatorList.scss
@@ -40,7 +40,7 @@
 
 @media (max-width: 480px) {
     .category-button {
-        margin-left: 8%; 
+        margin-left: auto; 
     }
 }
 
@@ -57,7 +57,7 @@
     text-align: center;
     
     color: #4F75FF;
-    margin-bottom: -2.5px;
+    margin-bottom: -2px;
     
     border-bottom: 2px solid var(--main, #4F75FF);;
     padding-bottom: 12px; 
